# Rethash

./: README.md
comparison/: Cargo.toml  build.rs
comparison/src/: fish_hash_bindings.rs  main.rs
cpp/: CMakeLists.txt  RetHash.cpp  RetHash.h
rust/: Cargo.toml
rust/src/: lib.rs
