[package]
name = "ret_hash"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"

description = "Hashing algorithm used for RealEther"
authors = [""]
homepage = ""
repository = "https://github.com/RealEthercoin/Rethash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
